# matty-lab

./: CMakeLists.txt  Definitions.h  README.md  main.c  makefile
errors/: Errors.c  Errors.h
keywords/: NativeFunctions.c  NativeFunctions.h
lexical/: LexicalDefinitions.l  lex.yy.c  lex.yy.h
symbols/: SymbolsTable.c  SymbolsTable.h
syntactic/: SyntacticDefinitions.tab.c  SyntacticDefinitions.tab.h  SyntacticDefinitions.y
txt/: help.txt  test.txt  welcome.txt
util/: HashTable.c  HashTable.h  LinkedList.c  LinkedList.h
